--- a/informe/caratula.tex
+++ b/informe/caratula.tex
@@ -4,4 +4,4 @@
 % \grupo{Grupo 11}
 \integrante{Leandro Matayoshi}{79/11}{leandro.matayoshi@gmail.com}
 \integrante{Martin Santos}{413/11}{martin.n.santos@gmail.com}
-\integrante{Alexander Szyrej}{}{luzbelito.as@gmail.com}
+\integrante{Alexander Szyrej}{642/11}{luzbelito.as@gmail.com}
