--- a/informe/introduccion.tex
+++ b/informe/introduccion.tex
@@ -1,6 +1,7 @@
 El siguiente trabajo pretende analizar los distintos algoritmos de $scheduling$ para distintos tipos de tareas. 
 Para ello implementamos diferentes tareas para simular distintos tipos de ellas, sean de procesamiento intenso o interactivas, etc.
 Así mismo se implementaron distintos algoritmos de $scheduling$ para evaluar su respuesta frente a diferentes lotes de tareas mencionadas anteriormente.
-Para un mejor análisis, la cátedra nos facilitó un graficador que toma de entrada el output del simulador $simusched$ (también provisto por la cátedra) que utiliza los algoritmos de $scheduling$ programados por nosotros.
+
+Para un mejor análisis, la cátedra nos facilitó un graficador para el status de las tareas y los nucleos de procesamiento, que toma de entrada el output del simulador $simusched$ (también provisto por la cátedra) el cual utiliza los algoritmos de $scheduling$ programados por nosotros.
 
 El trabajo fue dividido en tres partes:
