--- a/informe/ecuanimidad_lottery.tex
+++ b/informe/ecuanimidad_lottery.tex
@@ -1,4 +1,4 @@
-\subsection{Ecuanimidad del SchedLottery}
+\subsubsection{Ecuanimidad del SchedLottery}
 
 En el ejercicio 5 implementamos un scheduler en base al paper ''Lottery scheduling''. Intentamos generar un mecanismo de control eficiente, flexible y justo en donde cada tarea fuese procesada
 aproximadamente un tiempo equivalente a las otras, sin importar su tipo. Este último aspecto es el que nos permite hablar de ecuanimidad del scheduler.
