--- a/informe/main.tex
+++ b/informe/main.tex
@@ -33,7 +33,7 @@
 \section{Parte I: Entendiendo $simusched$}
 \input{parte1.tex}
 \section{Parte II: Nuevos Schedulers}
-\input{ecuanimidad_lottery.tex}
+\input{parte2.tex}
 \section{Parte III: Experimentación}
 \input{parte3.tex}	
 
