--- a/informe/experimentos.tex
+++ b/informe/experimentos.tex
@@ -1,4 +1,4 @@
-\subsection{Experimentos}
+\subsubsection{Experimentos}
 
 Para verificar el $fairness$ de nuestro scheduler decidimos cargarle una determinada cantidad de tareas y comparar cuántos ticks insumía cada una en un rango determinado. Si efectivamente existe ecuanimidad, cada una de las tareas debería insumir una cantidad similar de ticks.
 
