--- a/informe/parte2.tex
+++ b/informe/parte2.tex
@@ -27,3 +27,4 @@ El segundo caso refleja el mismo funcionamiento pero quad-core, con iguales quan
 \subsection{SchedLottery y compensaciones probabilísticas}
 
 \input{ecuanimidad_lottery.tex}
+\input{experimentos.tex}
