--- a/informe/parte3.tex
+++ b/informe/parte3.tex
@@ -14,8 +14,16 @@ Luego nos planteamos determinar cual es el valor óptimo de quantum para ciertos
 \subsection{TurnAround time}
 
 Aquí queremos ver como afecta el quantum que el scheduler determina para cada CPU en el tiempo de ejecución de cada tarea. Planteamos la siguiente ecuación:
-\centering $\frac{\#ciclosDeEjecucion}{quantum} * (quantum + costoContexto + constoMigracion) = tiempoDeEjec$
 
+~
 
+$\frac{\#ciclosDeEjecucion}{quantum} * (quantum + costoContexto + constoMigracion) = tiempoDeEjec$
+
+~
+
+Podemos ver que a medida que el quantum es mayor, el tiempo de ejecución de cada tarea decrece, y es razonable puesto que si la tarea termina en un único quantum, no debe esperar a las demás tareas, pero terminamos en un FCFS.
 
 \subsection{Waiting time}
+
+Por otro lado vemos como el quantum afecta el tiempo de espera de cada tarea. Lo que buscamos en este caso es sacar un promedio de tiempo de estado $ready$ asociado a las tareas, es decir, un tiempo promedio de espera en el cual la tarea esta lista para ejecutar pero el scheduler no se lo permite.
+Podemos ver que al contrario del caso anterior, aquí un quantum menor parece ser lo mas razonable, ya que permite una mejor interactividad y cada tarea debe esperar menos para correr.
