sched_lottery.tex no estaba incluido

--- a/informe/parte2.tex
+++ b/informe/parte2.tex
@@ -26,5 +26,6 @@ El segundo caso refleja el mismo funcionamiento pero quad-core, con iguales quan
 
 \subsection{SchedLottery y compensaciones probabilísticas}
 
+\input{sched_lottery.tex}
 \input{ecuanimidad_lottery.tex}
 \input{experimentos.tex}
