--- a/informe/introduccion.tex
+++ b/informe/introduccion.tex
@@ -4,6 +4,6 @@ Para construir lotes variados implementamos diferentes tareas que simulan los di
 
 Se implementaron cuatro algoritmos de $scheduling$ y se evaluó su desempeño sobre los diferentes lotes de tareas mencionados anteriormente en base a dos métricas: Turnaround time y Waiting time.
 
-Para un mejor análisis, la cátedra nos facilitó un graficador para el status de las tareas y los nucleos de procesamiento, que toma de entrada el output del simulador $simusched$ (también provisto por la cátedra) el cual utiliza los algoritmos de $scheduling$ programados por nosotros.
+Para un mejor análisis, la cátedra nos facilitó un graficador para el status de las tareas y los núcleos de procesamiento, que toma de entrada el output del simulador $simusched$ (también provisto por la cátedra) el cual utiliza los algoritmos de $scheduling$ programados por nosotros.
 
 El trabajo fue dividido en tres partes:
