--- a/informe/sched_lottery.tex
+++ b/informe/sched_lottery.tex
@@ -1,6 +1,131 @@
+\subsubsection{Idea general}
 
-En el ejercicio 5 implementamos un scheduler en base al paper ''Lottery scheduling''. Intentamos generar un mecanismo de control eficiente, flexible y justo en donde cada tarea fuese procesada
-aproximadamente un tiempo equivalente a las otras, sin importar su tipo. Este último aspecto es el que nos permite hablar de ecuanimidad del scheduler.
+Las tareas que utilizan I/O (como por ejemplo las interactivas) traen aparejada una desventaja respecto a las de uso de CPU cuando se las analiza en función de la métrica \emph{turn-around} time,
+independientemente del scheduler que esté siendo utilizado. Si consideramos 2 tareas distintas: una bloqueante y una de uso intensivo de CPU que necesitan la
+misma cantidad de tiempo de procesamiento y cuentan con un core entero a su disposición, las tareas bloqueantes tendrán indefectiblemente un \emph{turn-around} time mayor, debido al tiempo que
+permanecen bloqueadas.
+
+\begin{figure}[H]
+  \centering\includegraphics[width=18 cm]{graficos/inherente.png}
+  \caption{Procesamiento simultáneo de una tarea I/O y otra de uso\_CPU}
+\end{figure}
+
+En el caso mostrado en el gráfico de arriba, ambas tareas requieren de 10 ticks de cpu para finalizar. Sin embargo, la tarea bloqueante tarda el doble de tiempo en terminar. 
+
+En el ejercicio 5 implementamos un scheduler en base al paper ''Lottery scheduling''. El mismo está diseñado para equilibrar esta desigualdad entre el \emph{turn-around} de las tareas relacionado con el
+naturaleza de las mismas. El scheduler seleccionea la tarea a la cual será asignado el procesador durante el próximo quantum mediante un sorteo, en donde las probabilidades de ganar
+de cada una son inversamente proporcionales a la fracción de quantum que utilizaron la última vez que fueron ganadoras. Para ello se utiliza un sistema de \textbf{tickets}.
+Las tareas que consumieron la totalidad del quantum disponen de un único ticket, mientras que las tareas que consumieron una fracción $\frac{f}{q}$ del quantum disponen de $\frac{q}{f}$ tickets (redondeado
+hacia arriba). La tarea a la cual se le asignará el procesador durante el próximo quantum será la que tenga el ticket ganador del sorteo entre la totalidad de los mismos.
+
+De esta manera, las tareas de I/O tendrán más probabilidades de ganar los sorteos respecto a aquellas que utilizan la totalidad del CPU. Esto provoca una reducción en el \emph{waiting time} de las mismas 
+(ya que deben esperar menos para volver a correr), y por lo tanto también en su \emph{turn-around} time.
+
+\subsubsection{Estructuras auxiliares}
+
+\begin{itemize}
+  \item vector<int> cpu\_quantum: Arreglo en donde hay una posición por cada uno de los cores. En cada una queda registro de la cantidad de ticks durante los cuales el procesador ha permanecido
+  en posesión del proceso actual. 
+  \item cantTickets: La cantidad de tickets total que participarán en el próximo sorteo.
+  \item max\_quantum: Determina la duración del quantum. Sea \emph{core} uno de los procesadores.\\ 
+  Cuando cpu\_quantum[core] $\geq$ max\_quantum, la tarea ha consumido la totalidad del quantum y es necesario realizar
+  un sorteo para determinar la próxima tarea que será ejecutada.
+  \item vector<tarea,\#tickets> tareasReady: Arreglo que contiene las tareas listas para correr, junto con la cantidad de tickets con la que participarán en el sorteo.$\geq$ max\_quantum, la tarea ha consumido la totalidad del quantum y es necesario realizar
+  \item vector<tarea,\#tickets> tareasBlocked: Arreglo que contiene las tareas bloqueadas junto con la cantidad de tickets con las que participarán en el sorteo cuando vuelvan al estado Ready
+\end{itemize}
+
+\subsubsection{Pseucódigo}
+
+\begin{algorithmic}
+  \Function{load}{int pid}
+      \State Agrego a tareasReady la tupla <pid,1>
+      \State $cantTickets \gets cantTickets+1$;
+  \EndFunction
+\end{algorithmic}
+
+~
+
+Al ser cargadas, las tareas comienzan inicialmente con un único ticket. Es importante actualizar la variable \emph{cantTickets} para dejar actualizado el sorteo.
+
+~
+
+\begin{algorithmic}
+  \Function{unblock}{int pid}
+      \State Agrego a tareasReady la tupla <pid,\#tickets>, (\#tickets está almacenado en tareasBlocked).
+      \State Elimino de tareasBlocked la tupla <pid,\#tickets>
+      \State $cantTickets \gets cantTickets+\#tickets$;
+  \EndFunction
+\end{algorithmic}
+
+~
+
+Las tareas recientemente desbloqueadas participarán del próximo sorteo, por lo que son agregadas a \emph{tareasReady} y retiradas de \emph{tareasBlocked}.
+Es importante actualizar la variable \emph{cantTickets} para dejar actualizado el sorteo.
+
+~
+
+\begin{algorithmic}
+  \Function{unblock}{int pid}
+      \State Agrego a tareasReady la tupla <pid,\#tickets>, (\#tickets está almacenado en tareasBlocked).
+      \State Elimino de tareasBlocked la tupla <pid,\#tickets>
+      \State $cantTickets \gets cantTickets+\#tickets$;
+  \EndFunction
+\end{algorithmic}
+
+~
+
+\begin{algorithmic}
+  \Function{tick}{int cpu, Motivo m}
+      \State $actual \gets$ tarea que está siendo ejecutada por el \emph{cpu} actualmente
+      \State $proximo \gets$ actual
+      
+      \If{m==EXIT}
+	  \State cpu\_quantum[cpu]=0 (Reseteo el quantum)
+	  \If{!tareasReady.empty()}
+	      \State $proximo \gets lottery()$
+	  \Else
+	      \State $proximo \gets IDLE\_TASK$
+	  \EndIf
+      \EndIf
+      \State
+      \If{m==BLOCK}
+	  \State cpu\_quantum[cpu]++ 
+	  \State \#tickets = $\frac{max\_quantum}{cpu\_quantum[cpu]}$ 
+	  \State
+	  \State (La tarea se bloqueó, por lo que no utilizó la totalidad del quantum.
+	  \State Se le asigna una cantidad de tickets inversamente proporcional 
+	  \State a la fracción de quantum que haya utilizado.)
+	  \State
+	  \State Agrego a tareasBlocked la tupla <actual,\#tickets>
+	  \State cpu\_quantum[cpu] $\gets 0$
+	  \If{!tareasReady.empty()}
+	      \State $proximo \gets lottery()$
+	  \Else
+	      \State $proximo \gets IDLE\_TASK$
+	  \EndIf
+      \EndIf
+      \State
+      \If{m==TICK}
+	  \State cpu\_quantum[cpu]++
+	  \If{actual==IDLE\_TASK}
+	      \If{!tareasReady.empty()}
+		  \State cpu\_quantum[cpu]=0 
+		  \State $proximo \gets lottery()$
+	      \EndIf
+	      \State(Si no hay otras tareas, continúo ejecutando la IDLE)
+	  \Else(se está ejecutando una tarea)
+	      \If{cpu\_quantum $\geq$ max\_quantum}
+		  \If{!tareasReady.empty()}
+		      \State cpu\_quantum[cpu]=0 (Reseteo el quantum)
+		      \State $proximo \gets lottery()$
+		  \EndIf
+		  \State(Si no hay otras tareas, continúo ejecutando la misma)
+	      \EndIf
+	   \EndIf
+      \EndIf
+  \EndFunction
+\end{algorithmic}
+
 
 Para ejemplificar lo mencionado anteriormente, supongamos que en una computadora de un solo core se han lanzado dos procesos que corren en simultáneo. El primero de ellos, al cual llamaremos $A$, utiliza
 activamente el CPU sin necesidad de hacer llamados al sistema o esperar que se liberen recursos de la máquina (podría ser, por ejemplo, el caso de una aplicación científica que ejecuta gran cantidad de 
