Sched_lottery informe

--- a/informe/sched_lottery.tex
+++ b/informe/sched_lottery.tex
@@ -6,7 +6,7 @@ misma cantidad de tiempo de procesamiento y cuentan con un core entero a su disp
 permanecen bloqueadas.
 
 \begin{figure}[H]
-  \centering\includegraphics[width=18 cm]{graficos/inherente.png}
+  \centering\includegraphics[scale = 0.2]{graficos/inherente.png}
   \caption{Procesamiento simultáneo de una tarea I/O y otra de uso\_CPU}
 \end{figure}
 
@@ -121,12 +121,57 @@ Es importante actualizar la variable \emph{cantTickets} para dejar actualizado e
 
 \begin{algorithmic}
   \Function{lottery}{}
-      \State semilla
-      \State Elimino de tareasBlocked la tupla <pid,\#tickets>
-      \State $cantTickets \gets cantTickets+\#tickets$;
+	\State $suma \gets 0$
+      	\State $semilla++$
+	\State srand(semilla)
+	\State $ticketGanador \gets (rand() \% cantTickets)+1$
+	\For{$i \gets 0$ to tareasReady.size()}
+		\State $suma \gets suma+ \#tickets$ de tarea i		
+		\If{$ticketGanador \leq suma$}
+			\State $res \gets$ tarea i
+			\State $cantTickets \gets $ \#tickets de tarea i	
+			\State Borro la tarea i de tareasReady
+			\State break
+		\EndIf
+	\EndFor	
+	\State \Return res
   \EndFunction
 \end{algorithmic}
 
+~
+
+Para realizar el sorteo se selecciona un número aleatiro utilizando las funciones rand y srand (ya explicadas con anterioridad).
+
+Incrementamos el valor de la semilla para que la próxima vez el sorteo se realice con una secuencia pseudoaleatoria distinta.
+
+El sorteo se realiza específicamente en la línea: $ticketGanador$ = ( rand() \% (cantTickets) ) + 1.
+
+Recorremos la lista hasta encontrar la tarea con el ticket ganador.
+
+Decrementamos la cantidad de tickets y retiramos $res$ de la lista de tareasReady.
+
+~
+
+\begin{figure}[H]
+  \centering\includegraphics[scale=0.5]{graficos/lottery.jpg}
+  \caption{Funcionamiento de lottery()}
+\end{figure}
+
+~
+
+\subsubsection{Experimentando con SchedLottery con compensation tickets}
+
+Simulemos en primer lugar el comportamiento de nuestro scheduler para un lote de tareas de cálculo: es decir, procesos que no 
+efectúan instrucciones de I/0. A lo largo de la ejecución habrá tantos tickets como tareas, cada uno correspondiente a una
+tarea distinta. Por lo tanto, dado un lote de $n$ tareas cada una tiene una probabilidad de $\frac{1}{n}$ de obtener el procesador
+en el próximo quantum. El comportamiento esperado es de alguna forma similar al de round robin, ya que se espera que cada $n$
+quantums, cada tarea haya sido ejecutada durante 1 quantum.
+
+
+
+En el caso mostrado en el gráfico de arriba, ambas tareas requieren de 10 ticks de cpu para finalizar. Sin embargo, la tarea bloqueante tarda el doble de tiempo en terminar. 
+
+En el ejercicio 5 implementamos un scheduler en base al paper ''Lottery scheduling''. El mismo está diseñado para equilibrar esta desigualdad entre el \emph{turn-around} de las tareas relacionado con el
 Para ejemplificar lo mencionado anteriormente, supongamos que en una computadora de un solo core se han lanzado dos procesos que corren en simultáneo. El primero de ellos, al cual llamaremos $A$, utiliza
 activamente el CPU sin necesidad de hacer llamados al sistema o esperar que se liberen recursos de la máquina (podría ser, por ejemplo, el caso de una aplicación científica que ejecuta gran cantidad de 
 cuentas). Por otro lado tenemos a la tarea $B$, que ejecuta una instrucción bloqueante cada cierto tiempo, desbloquéandose luego de una cierta cantidad de ticks del reloj. Supongamos también que ambos conviven
