just lotes en infoorme

--- a/informe/parte3.tex
+++ b/informe/parte3.tex
@@ -23,3 +23,5 @@ Podemos ver que a medida que el quantum es mayor, el turn-around time de cada ta
 Por otro lado vemos como el quantum afecta el tiempo de espera de cada tarea. Lo que buscamos en este caso es sacar un promedio de tiempo de estado $ready$ asociado a las tareas, es decir, un tiempo promedio de espera en el cual la tarea esta lista para ejecutar pero el scheduler no se lo permite.
 Podemos ver que al contrario del caso anterior, aquí un quantum menor parece ser lo mas razonable, ya que permite una mejor interactividad y cada tarea debe esperar menos para correr.
 
+Para experimetar en torno a estas métricas es necesario plantear que lotes usar para hacer una análisis serio y realista.
+\input{just_lotes.tex}
