varias cosas cambiadas

--- a/informe/ej8.tex
+++ b/informe/ej8.tex
@@ -7,3 +7,23 @@ Para comparar el funcionamiento de los dos schedulers simularemos el comportamie
 	\item Lote 3: conformada por tareas que solo hacen uso intensivo de CPU.
 \end{itemize}
 Para cada uno de los lotes calcularemos el waiting time y turnaround time promedio para cada scheduler tomando distintos valores de quantum y probando con 2, 3 y 4 cores. Teniendo en cuenta los resultados concluiremos cuál de los dos algoritmos se comporta mejor.
+
+\begin{figure}
+\hfill
+\subfigure[]{\includegraphics[width=8.75cm]{graficos/schedRR_pc/cores_2_wt.jpg}}
+\hfill
+\subfigure[]{\includegraphics[width=8.75cm]{graficos/schedRR_pc/cores_2_ta.jpg}}
+\hfill
+\caption{Gráfico de Waiting time y turnaround time en función del quantum con 2 cores para lote de tareas $lotePc$}
+\end{figure}
+
+\begin{center}
+    \begin{tabular}{ | l | l | l | p{5cm} |}
+    \hline
+    Cores & Waiting time promedio & Turnaround time \\ \hline
+    2 & asd & asd \\ \hline
+	3 & asd & asd \\ \hline
+	4 & asd & asd \\
+	\hline
+    \end{tabular}
+\end{center}
