--- a/informe/ej8.tex
+++ b/informe/ej8.tex
@@ -18,12 +18,14 @@ Para cada uno de los lotes calcularemos el waiting time y turnaround time promed
 \end{figure}
 
 \begin{center}
-    \begin{tabular}{ | l | l | l | p{5cm} |}
+    \begin{tabular}{ | l | l | l | l | l | p{5cm} |}
     \hline
-    Cores & Waiting time promedio & Turnaround time \\ \hline
-    2 & asd & asd \\ \hline
-	3 & asd & asd \\ \hline
-	4 & asd & asd \\
+    Cores & Wt RR & Wt RR2 & Ta RR & Ta RR2 \\ \hline
+    2 & 116.89 & 97 & 1998.06 & 1573.38 \\ \hline
+    3 & 78.71 & 92.74 & 1420.25 & 1310.04 \\ \hline
+    4 & 58.5 & 44.98 & 1112.45 & 847.02 \\
 	\hline
     \end{tabular}
 \end{center}
+
+
